# pbskids-dl.rs

./: .gitignore  Cargo.toml  README.md  build.rs  config.json
.github/workflows/: build.yaml
assets/: config.json  pbskids-dl-gui.desktop
debian/: postinst  prerm
docs/: config.md
src/: args.rs  assets.rs  config.rs  downloader.rs  errors.rs  main.rs  pbskids-dl-gui.rs  pbskids-dl.rs  ui.fl  ui.rs
