[package]
name = "pbskids-dl"
version = "3.2.0"
authors = ["pbskids-dl team"]
description = "A downloader for PBS KIDS videos."
license = "GPL-2.0-or-later"
documentation = "https://github.com/pbskids-dl/pbskids-dl/wiki"
readme = "README.md"
repository = "https://github.com/pbskids-dl/pbskids-dl"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["cargo"] }
serde_json = "1.0.120"
isahc = "1.7.2"
indicatif = "0.17.8"
serde ={version = "1.0.204", features = ["derive"]}
cargo-deb = "2.5.1"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true
# codegen-units = 1

[package.metadata.deb]
name = "pbskids-dl.rs"
maintainer = "NexusSfan <nexussfan@duck.com>"
copyright = "2024, pbskids-dl team"
license-file = ["LICENSE", "11"]
extended-description = """\
A downloader for PBS KIDS videos."""
depends = "$auto"
section = "tools"
priority = "optional"
conflicts = "pbskids-dl"
assets = [
    ["target/release/pbskids-dl", "usr/bin/", "755"],
    ["config.json", "usr/share/pbskids-dl/", "644"],
]